started a bit extending stuff around the webview. the problem of it is that it's a very basic lib/feature and much has to be wrapped around it to enable webView without communicating via a server HTTP. But that would be interesting.

--- a/DesktopWebApp/App/App.csproj
+++ b/DesktopWebApp/App/App.csproj
@@ -9,4 +9,17 @@
       <ProjectReference Include="..\Webview\Webview.Core.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <EmbeddedResource Include="View\Html\Main.html" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="View\Css" />
+      <Folder Include="View\Js" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="HtmlAgilityPack" Version="1.10.2" />
+    </ItemGroup>
+
 </Project>
