--- a/RequestChain/MainApp/MainApp.csproj
+++ b/RequestChain/MainApp/MainApp.csproj
@@ -3,6 +3,8 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp2.2</TargetFramework>
+        <LangVersion>8</LangVersion>
+        <NullableContextOptions>enable</NullableContextOptions>
     </PropertyGroup>
 
     <ItemGroup>
