--- a/RequestChain/MainApp/MainApp.csproj
+++ b/RequestChain/MainApp/MainApp.csproj
@@ -13,4 +13,8 @@
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="BHayve" />
+    </ItemGroup>
+
 </Project>
